--- a/src/app/entities/entities.component.html
+++ b/src/app/entities/entities.component.html
@@ -101,7 +101,11 @@
 
     <ng-container *ngIf="result">
       <div class="showing">
-        Showing {{result.returned}} of {{result.total}}
+        Showing {{pagination.showing}} results
+        <ng-container *ngIf="pagination.showing>0">
+          ({{pagination.lower}}&ndash;{{pagination.upper}})
+        </ng-container>
+        out of {{pagination.total}}
         <ng-container *ngIf="search && search.search">
           for &ldquo;{{search.search}}&rdquo;
         </ng-container>
