--- a/src/app/pagination-pages/pagination-pages.component.scss
+++ b/src/app/pagination-pages/pagination-pages.component.scss
@@ -5,3 +5,7 @@ ul{
     display: flex;
     flex-wrap: wrap;
 }
+
+input[type=button]:focus{outline:0;}
+button:focus {outline:0;}
+.active{ color: red; text-decoration: underline; }
