--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -33,6 +33,7 @@ mat-toolbar{
                 margin-bottom: 0.2em;
                 span.arrow{
                     color: white;
+                    padding-right: 0.2em;
                 }
                 a{
                     text-decoration: none;
@@ -52,6 +53,7 @@ mat-toolbar{
             li.active-link{
                 span.arrow{
                     color:#333;
+                    padding-right: 0.2em;
                 }
                 a:hover{
                     color: #333;
