--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 <mat-toolbar *ngIf="backendApiService.target">
-
   <h1 style="margin-left: 1em;">{{TARGETS[backendApiService.target].title}}</h1>
 
-  <span class="environmentName" *ngIf="authService.getLoggedInUser()"
-    [ngStyle]="{'color': TARGETS[backendApiService.target].color}">{{backendApiService.target}}</span>
+  <ng-container *ngIf="TARGETS[backendApiService.target]">
+    <span class="environmentName" *ngIf="authService.getLoggedInUser()"
+      [ngStyle]="{'color': TARGETS[backendApiService.target].color}">{{backendApiService.target}}</span>
+  </ng-container>
 
   <span class="example-fill-remaining-space"></span>
 
@@ -36,17 +37,21 @@
 
       <ng-container *ngIf="authService.isLoggedIn()">
 
-        <li routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:
+        <ng-container *ngIf="schedule">
+          <li routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:
             true}">
-          <span class='arrow'>&#9656;</span>
-          <a [routerLink]="['current']">Current</a>
-        </li>
+            <span class='arrow'>&#9656;</span>
+            <a [routerLink]="['current']">Current</a>
+          </li>
 
-        <li routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:
-            true}">
-          <span class='arrow'>&#9656;</span>
-          <a [routerLink]="['schedule']">Schedule</a>
-        </li>
+
+          <li routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:
+          true}">
+            <span class='arrow'>&#9656;</span>
+            <a [routerLink]="['schedule']">Schedule</a>
+          </li>
+        </ng-container>
+
 
         <ng-container *ngIf="entities">
           <ng-container *ngFor="let plural of entities">
